# MPC-test

./: .gitignore  CMakeLists.txt  README.md
assets/推导过程/: cart-pole.md  lagrange.md
config/: cart_pole.yaml
include/: cart_pole.hpp
include/pid_cart_pole/: config_loader.hpp  pid_controller.hpp
scripts/: build.sh  pid_cart_pole_vis.py
src/: cart_pole.cpp  opencv_cart_pole_demo.cpp  pangolin_cart_pole_demo.cpp  pid_cart_pole_demo.cpp  pid_controller.cpp
src/pid_cart_pole/: cart_pole.cpp  config_loader.cpp
